backend: added category
